fix dark mode

--- a/statics/css/gallery.css
+++ b/statics/css/gallery.css
@@ -1,11 +1,9 @@
-.gallery {
-  padding-top: 73.38px;
-}
+
 .grid-container {
   display: grid;
-  grid-gap: 10px;
-  background-color: gray;
-  padding: 10px;
+  grid-gap: 0.7%;
+  background-color: #b1adad;
+  padding: 0.7%;
   width: 100%;
   position: relative;
 }
@@ -15,10 +13,12 @@
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
   padding: 0.5%;
+  border-radius: 1%;
   width: 100%;
   height: 100%;
 }
 .grid-item > img {
+  border-radius: 1%;
   object-fit: cover;
   width: 100%;
   height: 100%;
