--- a/statics/css/header.css
+++ b/statics/css/header.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  min-height: 45rem;
+  min-height: 43vmax;
   position: relative;
   background: linear-gradient(to right, #d94b86, #485de7a1),
     url("../images/dog.jpg");
@@ -30,11 +30,19 @@
 
 .header .curve {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   width: 100%;
   height: 10%;
   transform: rotate(180deg);
 }
-.header .curve-path {
+.curve-path {
   fill: #ffffff;
+}
+
+@media only screen and (max-width: 600px) {
+  .header-text {
+    width: 100%;
+    text-align: center;
+    right: 0;
+  }
 }
